chore: remove unused packages and downgrade next to work with did-session

--- a/package.json
+++ b/package.json
@@ -28,20 +28,17 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connectkit": "^1.8.2",
-    "did-session": "^3.1.0",
+    "did-session": "2.1.1",
     "dotenv": "^16.4.5",
     "emoji-picker-react": "^4.11.1",
     "framer-motion": "^11.2.10",
     "immer": "^10.1.1",
-    "kysely": "^0.27.3",
-    "kysely-codegen": "^0.15.0",
     "lucide-react": "^0.395.0",
-    "next": "14.2.4",
+    "next": "14.1.0",
     "next-themes": "^0.3.0",
-    "pg": "^8.12.0",
     "querystring": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
@@ -58,10 +55,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/yargs": "^17.0.32",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
