--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "index-network-sdk.d.ts"
+    "tailwind.d.ts"
   ],
   "exclude": ["node_modules"]
 }
