--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query": "^5",
     "@vercel/postgres-kysely": "^0.8.0",
     "chromadb-default-embed": "^2.13.2",
     "class-variance-authority": "^0.7.0",
@@ -45,7 +45,7 @@
     "tailwind-merge": "^2.3.0",
     "ts-node": "^10.9.2",
     "viem": "2.x",
-    "wagmi": "^2.10.2",
+    "wagmi": "2.x",
     "yargs": "^17.7.2",
     "zustand": "^4.5.4"
   },
